# codeforces

./: README.md  codeforces.cabal  replit.nix
app/Problem/P1779/C/: Soluion.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
test/Problem/P1779/C/: Test.hs
