cabal-version:      2.4
name:               codeforces
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Replit user
maintainer:         <>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md


test-suite codeforces-testsuite
    type:             detailed-0.9
    main-is:          Main.hs
    test-module:      Main
    hs-source-dirs:   test
    build-depends:    base
                    , QuickTest
                    , HUnit
                    , test-framework


executable codeforces
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Problem.P1779.C.Solution

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
